Fix UI overflow when browser width is small

--- a/static/style.css
+++ b/static/style.css
@@ -1,10 +1,9 @@
-.main.container {
-    margin-top: 5.5em;
-}
-
 .padding {
     padding-left: 1.5em;
     padding-right: 1.5em;
+    width: 1127px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .ui.segment:first-child {
